--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "downlevelIteration": true,
+
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
